JS-Ajax-JSON-GET test

--- a/JSHomeWork/wwwroot/border.html
+++ b/JSHomeWork/wwwroot/border.html
@@ -1,12 +1,3 @@
-﻿
-
-    <h1>我是Borderifame页面</h1>
-    <a href="/test.html">跳转</a>
-    <button type="button">提交</button>
-    <script>
-        document.getElementsByTagName("button")[0].addEventListener("click", function () {
-            window.parent.document.getElementsByTagName("p")[0].innerText = "background-color: pink;";
-        }
-    </script>
-
-
+﻿{"name":"老程","age":21,"isFemale":true,"hobby":["tabletennis",
+"basketball","swim"],"course":{"C#":86,"HTML/CSS/JavaScript":
+95,"SQL":92,"ASP.NET":null}}
